# FYP-SSLChain-Backend

./: CMakeLists.txt  README.md  chain.h  main.cpp  main.h  serialize.h  server.cpp  server.h  streams.h  xcert.cpp  xcert.h
certs/: genCert1  genCert1.pem  genCert2  genCert2.pem  genCert3  genCert3.pem  genCert4  genCert4.pem  genKey1  genKey1.pem  genKey2  genKey3  genKey3.pem  genKey4  genKey4.pem  note.txt
crypto/: common.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  sha256.cpp  sha512.cpp
primitives/: block.cpp  block.h  certs.cpp  certs.h
test/: client.py
